ecmascript/parser/tests/typescript-errors/tsc/es6/templates/taggedTemplatesWithTypeArguments2/input.ts.stderr
error: Expression expected
  --> $DIR/tests/typescript-errors/tsc/es6/templates/taggedTemplatesWithTypeArguments2/input.ts:39:14
   |
39 |         super<number, string, T> `hello world`;
   |              ^

